--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jk ENTERPRISES - Safety Dashboard</title>
+    <title>Parmar Construction - Safety Dashboard</title>
     <style>
         body {
             font-family: 'Arial', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -116,7 +116,7 @@
 <body>
     <header id="dashboard-header">
         <div class="header-content">
-            <img src="parmarlogo.png" alt="pc logo" class="header-logo">
+            <img src="parmarlogo.png" alt="JKE logo" class="header-logo">
             <div class="header-title-group">
                 <div class="header-title">M/S Parmar Construction</div>
                 <div class="header-tagline">vendor code P299</div>
@@ -435,33 +435,44 @@
                 e.preventDefault();
 
                 const formData = new FormData(attendanceForm);
+                const date = formData.get('date');
+                const site = formData.get('site');
 
-                try {
-                    const response = await fetch('https://script.google.com/macros/s/AKfycbyhzp-lLTnsFRpwr7_ab7EsDmt8fbX2Ujma-i6YDVR0umWBztre2y32lXA_UZtjKgtnlQ/exec', {
-                        method: 'POST',
-                        body: formData // Do NOT set Content-Type header!
-                    });
-
-                    const text = await response.text();
-                    let result;
-                    try {
-                        result = JSON.parse(text);
-                    } catch (e) {
-                        console.error('Response is not valid JSON:', text);
-                        alert('Server response was not valid JSON.');
-                        return;
+                // Collect attendance data
+                let attendanceEntries = [];
+                for (let i = 0; i <= 12; i++) {
+                    const name = document.querySelector(`input[name="attendance[${i}]"]`)?.closest('tr')?.children[0]?.textContent?.trim();
+                    const designation = document.querySelector(`input[name="attendance[${i}]"]`)?.closest('tr')?.children[1]?.textContent?.trim();
+                    const safetyPass = document.querySelector(`input[name="attendance[${i}]"]`)?.closest('tr')?.children[2]?.textContent?.trim();
+                    const status = formData.get(`attendance[${i}]`);
+                    if (name && designation && safetyPass && status) {
+                        attendanceEntries.push({ date, site, name, designation, safetyPass, status });
                     }
-
-                    if (result.status === "success") {
-                        alert(result.message);
-                        attendanceForm.reset();
-                    } else {
-                        alert('Error: ' + result.message);
-                    }
-                } catch (error) {
-                    console.error('Error submitting form:', error);
-                    alert('successfully submited attendance form');
                 }
+
+                // Send each entry as a separate POST request
+                for (const entry of attendanceEntries) {
+                    const entryForm = new FormData();
+                    entryForm.append('date', entry.date);
+                    entryForm.append('site', entry.site);
+                    entryForm.append('name', entry.name);
+                    entryForm.append('designation', entry.designation);
+                    entryForm.append('safetyPass', entry.safetyPass);
+                    entryForm.append('attendance', entry.status);
+
+                    try {
+                        const response = await fetch('https://script.google.com/macros/s/AKfycbxyzvgXgX2Nc0Lapjspx_SIAfGYDpbDPlV4i3ICUOx6MkSXhlrxokrMbiHj8JukzQ6a-A/exec', {
+                            method: 'POST',
+                            body: entryForm
+                        });
+                        // Optionally handle response here
+                    } catch (error) {
+                        console.error('Error submitting entry:', error);
+                    }
+                }
+
+                alert('Attendance submitted serial-wise!');
+                attendanceForm.reset();
             });
         });
 
