--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parmar Construction - Safety Dashboard</title>
+    <title>Parmar construction - Safety Dashboard</title>
     <style>
         body {
             font-family: 'Arial', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -461,7 +461,7 @@
                     entryForm.append('attendance', entry.status);
 
                     try {
-                        const response = await fetch('https://script.google.com/macros/s/AKfycbyhzp-lLTnsFRpwr7_ab7EsDmt8fbX2Ujma-i6YDVR0umWBztre2y32lXA_UZtjKgtnlQ/exec', {
+                        const response = await fetch('https://script.google.com/macros/s/AKfycbxyzvgXgX2Nc0Lapjspx_SIAfGYDpbDPlV4i3ICUOx6MkSXhlrxokrMbiHj8JukzQ6a-A/exec', {
                             method: 'POST',
                             body: entryForm
                         });
