--- a/index.html
+++ b/index.html
@@ -434,31 +434,22 @@
             attendanceForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
 
-                const formData = new FormData(attendanceForm);
-                const date = formData.get('date');
-                const site = formData.get('site');
+                const rows = document.querySelectorAll('#attendance-form tbody tr');
+const workers = [];
+rows.forEach((row, index) => {
+  workers.push({
+    name: row.children[0].textContent.trim(),
+    designation: row.children[1].textContent.trim(),
+    safetyPass: row.children[2].textContent.trim(),
+    attendance: row.querySelector(`input[name="attendance[${index}]"]`).value
+  });
+});
 
-                // Collect attendance data
-                let attendanceEntries = [];
-                for (let i = 0; i <= 12; i++) {
-                    const name = document.querySelector(`input[name="attendance[${i}]"]`)?.closest('tr')?.children[0]?.textContent?.trim();
-                    const designation = document.querySelector(`input[name="attendance[${i}]"]`)?.closest('tr')?.children[1]?.textContent?.trim();
-                    const safetyPass = document.querySelector(`input[name="attendance[${i}]"]`)?.closest('tr')?.children[2]?.textContent?.trim();
-                    const status = formData.get(`attendance[${i}]`);
-                    if (name && designation && safetyPass && status) {
-                        attendanceEntries.push({ date, site, name, designation, safetyPass, status });
-                    }
-                }
-
-                // Send each entry as a separate POST request
-                for (const entry of attendanceEntries) {
-                    const entryForm = new FormData();
-                    entryForm.append('date', entry.date);
-                    entryForm.append('site', entry.site);
-                    entryForm.append('name', entry.name);
-                    entryForm.append('designation', entry.designation);
-                    entryForm.append('safetyPass', entry.safetyPass);
-                    entryForm.append('attendance', entry.status);
+const payload = {
+  date: attendanceForm.querySelector('input[name="date"]').value,
+  site: attendanceForm.querySelector('select[name="site"]').value,
+  workers
+};
 
                     try {
                         const response = await fetch('https://script.google.com/macros/s/AKfycbyhzp-lLTnsFRpwr7_ab7EsDmt8fbX2Ujma-i6YDVR0umWBztre2y32lXA_UZtjKgtnlQ/exec', {
