--- a/index.html
+++ b/index.html
@@ -397,90 +397,89 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            // Login system
-            const loginForm = document.getElementById('login-form');
-            const attendanceForm = document.getElementById('attendance-form');
-            const loginError = document.getElementById('login-error');
-            const siteSelect = document.getElementById('site-select');
-            const attendanceTableSection = document.getElementById('attendance-table-section');
+    document.addEventListener('DOMContentLoaded', () => {
+        const loginForm = document.getElementById('login-form');
+        const attendanceForm = document.getElementById('attendance-form');
+        const loginError = document.getElementById('login-error');
+        const siteSelect = document.getElementById('site-select');
+        const attendanceTableSection = document.getElementById('attendance-table-section');
 
-            // Demo credentials (replace with real authentication as needed)
-            const DEMO_USER = "admin";
-            const DEMO_PASS = "1234";
+        const DEMO_USER = "admin";
+        const DEMO_PASS = "1234";
 
-            loginForm.addEventListener('submit', function(e) {
-                e.preventDefault();
-                const username = document.getElementById('username').value.trim();
-                const password = document.getElementById('password').value.trim();
-                if (username === DEMO_USER && password === DEMO_PASS) {
-                    loginForm.style.display = "none";
-                    attendanceForm.style.display = "block";
-                    loginError.style.display = "none";
-                } else {
-                    loginError.style.display = "block";
-                }
-            });
-
-            // Show/hide attendance table section based on site selection
-            siteSelect.addEventListener('change', function() {
-                if (this.value) {
-                    attendanceTableSection.style.display = 'block';
-                } else {
-                    attendanceTableSection.style.display = 'none';
-                }
-            });
-
-            attendanceForm.addEventListener('submit', async (e) => {
-                e.preventDefault();
-
-                const rows = document.querySelectorAll('#attendance-form tbody tr');
-const workers = [];
-rows.forEach((row, index) => {
-  workers.push({
-    name: row.children[0].textContent.trim(),
-    designation: row.children[1].textContent.trim(),
-    safetyPass: row.children[2].textContent.trim(),
-    attendance: row.querySelector(`input[name="attendance[${index}]"]`).value
-  });
-});
-
-const payload = {
-  date: attendanceForm.querySelector('input[name="date"]').value,
-  site: attendanceForm.querySelector('select[name="site"]').value,
-  workers
-};
-
-                    try {
-                        const response = await fetch('https://script.google.com/macros/s/AKfycbyhzp-lLTnsFRpwr7_ab7EsDmt8fbX2Ujma-i6YDVR0umWBztre2y32lXA_UZtjKgtnlQ/exec', {
-                            method: 'POST',
-                            body: entryForm
-                        });
-                        // Optionally handle response here
-                    } catch (error) {
-                        console.error('Error submitting entry:', error);
-                    }
-                }
-
-                alert('Attendance submitted serial-wise!');
-                attendanceForm.reset();
-            });
+        loginForm.addEventListener('submit', function(e) {
+            e.preventDefault();
+            const username = document.getElementById('username').value.trim();
+            const password = document.getElementById('password').value.trim();
+            if (username === DEMO_USER && password === DEMO_PASS) {
+                loginForm.style.display = "none";
+                attendanceForm.style.display = "block";
+                loginError.style.display = "none";
+            } else {
+                loginError.style.display = "block";
+            }
         });
 
-        function toggleFlip(element) {
-            const innerElement = element.querySelector('.flip-toggle-inner');
-            const inputElement = element.querySelector('input[type="hidden"]');
+        siteSelect.addEventListener('change', function() {
+            attendanceTableSection.style.display = this.value ? 'block' : 'none';
+        });
 
-            // Toggle the flipped class
-            element.classList.toggle('flipped');
+        // UPDATED SUBMIT LOGIC
+        attendanceForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
 
-            // Update the hidden input value based on the toggle state
-            if (element.classList.contains('flipped')) {
-                inputElement.value = 'Absent';
-            } else {
-                inputElement.value = 'Present';
+            // Collect date & site
+            const date = attendanceForm.querySelector('input[name="date"]').value;
+            const site = attendanceForm.querySelector('select[name="site"]').value;
+
+            // Collect workers data from table
+            const rows = attendanceForm.querySelectorAll('tbody tr');
+            const workers = [];
+            rows.forEach((row, index) => {
+                const name = row.children[0].textContent.trim();
+                const designation = row.children[1].textContent.trim();
+                const safetyPass = row.children[2].textContent.trim();
+                const attendance = row.querySelector(`input[name="attendance[${index}]"]`).value;
+                workers.push({ name, designation, safetyPass, attendance });
+            });
+
+            // Prepare JSON payload
+            const payload = { date, site, workers };
+
+            try {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbxyzvgXgX2Nc0Lapjspx_SIAfGYDpbDPlV4i3ICUOx6MkSXhlrxokrMbiHj8JukzQ6a-A/exec', {
+                    method: 'POST',
+                    body: JSON.stringify(payload)
+                });
+
+                const text = await response.text();
+                let result;
+                try {
+                    result = JSON.parse(text);
+                } catch (e) {
+                    console.error('Response is not valid JSON:', text);
+                    alert('Server response was not valid JSON.');
+                    return;
+                }
+
+                if (result.status === "success") {
+                    alert(result.message);
+                    attendanceForm.reset();
+                } else {
+                    alert('Error: ' + result.message);
+                }
+            } catch (error) {
+                console.error('Error submitting form:', error);
+                alert('Error submitting form.');
             }
-        }
-    </script>
+        });
+    });
+
+    function toggleFlip(element) {
+        const inputElement = element.querySelector('input[type="hidden"]');
+        element.classList.toggle('flipped');
+        inputElement.value = element.classList.contains('flipped') ? 'Absent' : 'Present';
+    }
+</script>
 </body>
 </html>
