--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="header-content">
             <img src="parmarlogo.png" alt="JKE logo" class="header-logo">
             <div class="header-title-group">
-                <div class="header-title">M/S Parmar Construction</div>
+                <div class="header-title"> Parmar Construction</div>
                 <div class="header-tagline">vendor code P299</div>
             </div>
         </div>
@@ -143,7 +143,7 @@
                 PPE & Attendance Form
             </h2>
             <div style="text-align: center; color: #000; font-size: 1.2em; margin-bottom: 24px;">
-                <b>Vendor Code: J0F0 | TATA Steel Jamshedpur</b>
+                <b>Vendor Code: P299 | TATA Steel Jamshedpur</b>
             </div>
             <label style="font-weight: bold; color: #000;">Select Date:</label>
             <input type="date" name="date" style="width: 100%; padding: 10px; margin-bottom: 18px; border-radius: 6px; border: 1px solid #ccc; font-size: 1em; color: #000;" required>
